--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tailwindcss/typography": "github:tailwindcss/typography",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -21,6 +22,8 @@
     "babel-plugin-macros": "^3.1.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.2.1",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
