--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-github-calendar": "^4.0.1",
+    "react-particles": "^2.11.0",
     "tailwindcss": "3.3.2",
+    "tsparticles": "^2.11.0",
     "typescript": "5.1.6"
   }
 }
